--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,14 @@ dependencies = [
     "langchain-community~=0.0",
     "lxml>=5.2.2",
     "langchain-openai>=0.1.0",
+    "pytest-asyncio>=0.23",
 ]
 readme = "README.md"
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0",
+    "pytest-asyncio>=0.23",
 ]
 
 [project.scripts]
@@ -32,7 +34,9 @@ mul-in-one-nemo = "mul_in_one_nemo.cli:main"
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
-addopts = "-q"
+# Ignore external NeMo-Agent-Toolkit tests to avoid dependency/env noise during local development
+addopts = "-q --ignore=external/NeMo-Agent-Toolkit"
+asyncio_mode = "auto"
 
 [build-system]
 requires = ["setuptools>=64", "wheel"]
