feat: Integrate RAG functionality into backend service
- Added new API endpoints for RAG knowledge ingestion and text ingestion.
- Enhanced Persona model to support background field for automatic RAG ingestion.
- Implemented dynamic API configuration resolution for Personas.
- Updated RAGService to handle asynchronous operations and improved document management.
- Introduced new testing suite for RAG service with database resolution.
- Removed outdated roadmap document and updated frontend README for clarity.
- Enhanced session and message handling in repositories to include timestamps and background information.
- Improved error handling during Persona creation and updates related to RAG ingestion.

--- a/personas/api_configuration.yaml.example
+++ b/personas/api_configuration.yaml.example
@@ -1,3 +1,16 @@
+# API 配置文件示例
+# 
+# 注意：此文件用于原型开发和本地测试。
+# 生产环境强烈建议使用数据库配置：
+# - 通过 Web UI 的 "API Profiles" 页面创建
+# - 或使用 POST /api/api-profiles API
+# 
+# 数据库模式优势：
+# - API Key 加密存储
+# - 运行时动态更新
+# - 按 Persona 灵活绑定
+# - 支持多租户
+
 apis:
   - name: Qwen32B
     base_url: https://api.example.com/v1
