feat: enhance PostgreSQL setup and backend integration
- Updated flake.nix to include standard C library for compatibility.
- Modified db_control.sh to auto-initialize PostgreSQL if the data directory is missing and set a custom run directory.
- Improved database migration handling in db_control.sh to use 'uv' if available.
- Updated package-lock.json and package.json to include new dependencies for Quasar and related packages.
- Refactored LoginPage.vue to use q-layout for better structure.
- Added chat conversation route to the router configuration.
- Introduced start_backend.sh script to streamline starting the FastAPI backend server with uvicorn.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ pgdata/
 *.sqlite3
 *.db
 
+# Milvus 数据
+.milvus/
+external/NeMo-Agent-Toolkit/examples/deploy/volumes/
+
 # Node.js
 node_modules/
 npm-debug.log*
