--- a/src/mio_frontend/mio-frontend/package.json
+++ b/src/mio_frontend/mio-frontend/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@devui-design/icons": "^1.4.0",
     "@matechat/core": "^1.10.0",
+    "@quasar/extras": "^1.16.15",
     "axios": "^1.13.2",
+    "quasar": "^2.17.7",
     "vue": "^3.5.24",
-    "vue-devui": "^1.6.34"
+    "vue-devui": "^1.6.34",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.9.1",
     "@types/node": "^24.10.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "sass": "^1.83.0",
     "typescript": "~5.9.3",
     "vite": "^7.2.2",
     "vue-tsc": "^3.1.3"
