--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "mul-in-one-nemo"
 version = "0.1.0"
 description = "Multi-agent social chat CLI built on NVIDIA NeMo Agent Toolkit"
 authors = [{name = "Mul in One Team"}]
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.14"
 dependencies = [
     "nvidia-nat>=0.6.0",
     "nvidia-nat-langchain>=1.3.0",
