fix: 更新子项目提交状态为dirty，以反映未提交的更改

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,4 @@ virtualbox/
 docs/~$利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx
 .direnv/flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
 .direnv/flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
+external/NeMo-Agent-Toolkit
