--- a/src/mio_frontend/mio-frontend/package.json
+++ b/src/mio_frontend/mio-frontend/package.json
@@ -2,6 +2,7 @@
   "name": "mio-frontend",
   "private": true,
   "version": "0.0.0",
+  "license": "GPL-3.0-only",
   "type": "module",
   "scripts": {
     "dev": "vite",
