feat(auth): integrate FastAPI-Users for user authentication with JWT and OAuth support
- Add user management and authentication routes using FastAPI-Users
- Implement JWT authentication with configurable secret and expiration
- Create OAuth clients for Gitee and GitHub, allowing third-party login
- Update database schema to support FastAPI-Users requirements
- Enhance environment variable configuration for security and flexibility
- Document authentication system and API endpoints in detail

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ dependencies = [
     "langchain-openai>=0.1.0",
     "langchain-google-genai>=2.0.0",
     "pytest-asyncio>=0.23",
+    "fastapi-users[sqlalchemy]>=13.0",
+    "httpx-oauth>=0.13",
+    "python-jose[cryptography]>=3.3",
+    "passlib[bcrypt]>=1.7",
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
