feat: add email verification and captcha registration
- Implemented email verification functionality with SMTP configuration.
- Added Turnstile captcha for user registration to enhance security.
- Created new routes for registration and email verification in FastAPI.
- Developed frontend pages for user registration and email verification.
- Updated user manager to send verification emails upon registration.
- Enhanced router to handle guest access for login and registration pages.
- Added error handling and user feedback for registration and verification processes.

--- a/.envrc
+++ b/.envrc
@@ -31,6 +31,23 @@ export ACCESS_TOKEN_EXPIRE_MINUTES="60"
 # 前端地址 (OAuth 回调时使用)
 export FRONTEND_URL="http://localhost:3000"
 
+# --- SMTP 邮件服务器配置（邮箱验证功能） ---
+# 如果不配置，邮箱验证功能将被禁用（但不影响注册）
+# 常见配置示例见 .envrc.example
+
+# Gmail 示例（取消注释并填写实际值）
+# export SMTP_HOST="smtp.gmail.com"
+# export SMTP_PORT="587"
+# export SMTP_USER="your-email@gmail.com"
+# export SMTP_PASSWORD="your-16-digit-app-password"
+# export SMTP_FROM_EMAIL="your-email@gmail.com"
+# export SMTP_FROM_NAME="Mul-in-ONE"
+
+# --- Cloudflare Turnstile 人机验证 ---
+# 如果不配置，验证码功能将被禁用（但不影响注册）
+# 开发测试密钥（始终通过）：1x0000000000000000000000000000000AA
+# export TURNSTILE_SECRET_KEY="your-turnstile-secret-key"
+
 # --- Application Behavior Defaults ---
 
 # Maximum number of agents that can speak in a single turn
