--- a/.envrc.example
+++ b/.envrc.example
@@ -31,6 +31,40 @@ export ACCESS_TOKEN_EXPIRE_MINUTES="60"
 # 前端地址 (OAuth 回调时使用)
 export FRONTEND_URL="http://localhost:3000"
 
+# --- SMTP 邮件服务器配置（邮箱验证功能） ---
+# 如果不配置，邮箱验证功能将被禁用（但不影响注册）
+# 常见配置示例：
+
+# Gmail (需要启用两步验证并生成应用专用密码)
+# export SMTP_HOST="smtp.gmail.com"
+# export SMTP_PORT="587"
+# export SMTP_USER="your-email@gmail.com"
+# export SMTP_PASSWORD="your-16-digit-app-password"
+# export SMTP_FROM_EMAIL="your-email@gmail.com"
+# export SMTP_FROM_NAME="Mul-in-ONE"
+
+# QQ邮箱 (需要生成授权码)
+# export SMTP_HOST="smtp.qq.com"
+# export SMTP_PORT="587"
+# export SMTP_USER="your-qq@qq.com"
+# export SMTP_PASSWORD="your-authorization-code"
+# export SMTP_FROM_EMAIL="your-qq@qq.com"
+# export SMTP_FROM_NAME="Mul-in-ONE"
+
+# Outlook
+# export SMTP_HOST="smtp-mail.outlook.com"
+# export SMTP_PORT="587"
+# export SMTP_USER="your-email@outlook.com"
+# export SMTP_PASSWORD="your-password"
+# export SMTP_FROM_EMAIL="your-email@outlook.com"
+# export SMTP_FROM_NAME="Mul-in-ONE"
+
+# --- Cloudflare Turnstile 人机验证 ---
+# 如果不配置，验证码功能将被禁用（但不影响注册）
+# 获取密钥: https://dash.cloudflare.com/
+# 开发测试密钥（始终通过）：1x0000000000000000000000000000000AA
+# export TURNSTILE_SECRET_KEY="your-turnstile-secret-key"
+
 # --- Application Behavior Defaults ---
 
 # Maximum number of agents that can speak in a single turn
