feat(docker): 添加本地 Milvus 堆栈配置，支持自定义配置挂载和可调内存限制

--- a/.gitignore
+++ b/.gitignore
@@ -118,6 +118,7 @@ dictionaries/
 # Containers / Docker
 docker-compose.override.yml
 docker-compose.*.local.yml
+!configs/docker-compose.milvus.local.yml
 .env.docker
 
 # CI / tooling
