--- a/.gitignore
+++ b/.gitignore
@@ -144,6 +144,7 @@ report/
 virtualbox/
 *.iml
 .direnv/
+.direnv
 docs/~$利乐队-Mio-2025年上海大学人工智能创新大赛作品研究报告.docx
 .direnv/flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa
 .direnv/flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
